Moved files from another repo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "LCA-TEA App",
+  "name": "LCA-TEA Sherpa Hanwha Software Collab",
   "icons": [
     {
       "src": "favicon.ico",
