--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "LCA-TEA App",
-  "name": "LCA-TEA Sherpa Hanwha Software Collab",
+  "short_name": "LCA-TEA Platform",
+  "name":  "LCA-TEA Platform",
   "icons": [
     {
       "src": "favicon.ico",
