--- a/package.json
+++ b/package.json
@@ -1,22 +1,41 @@
 {
-  "name": "lca-tea-app",
+  "name": "lca-tea-platform",
   "version": "0.1.0",
-  "homepage": "https://marijorc.github.io/lca-tea-app",
+  "homepage": "https://mysherpaspace.github.io/lca-tea-app",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.0",
+    "bulma-accordion": "^2.0.1",
+    "bulma-calendar": "^6.1.18",
+    "bulma-divider": "^0.2.0",
+    "bulma-list": "^1.2.0",
+    "bulma-pageloader": "^0.3.0",
+    "classnames": "^2.3.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
+    "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.6.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "sheetjs-style": "^0.15.8",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "css-build": "node-sass --omit-source-map-url src/styling/sass/index.scss src/styling/sass/index.css",
+    "css-watch": "npm run css-build -- --watch",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +60,17 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "@faker-js/faker": "^7.6.0",
+    "@redux-devtools/core": "^3.13.1",
+    "babel-eslint": "^9.0.0",
+    "bulma": "^0.9.4",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "gh-pages": "^4.0.0",
+    "node-sass": "^7.0.3"
   }
 }
